  a little bit more flexible.
- bugfixed ModelBase field list naming
- bugfixed replaceBean method
- added support for optimistic locking, useful when multiple android clients are writing
  to one android master database.
- added a locator function BaracusApplicationContext.getBeansOfType to find all instances
  implementing a certain class.

VERSION 0.8

- added the getIdField function in order to make overriding the id column naming possible
- added the getLoadAllCursor in order to make linking to a data DataBoundAdapter possible
- to be better able to work with persistence interfaces the LazyMorphicCollection has been
  introduced in order to be able to return a List<Type> from a Dao<SpecialType>
- interface registration now possible in order to extend code reuseability
  additional to applicationContainer.registerBeanClass(aClass) you now can
  call registerBeanClass(InterfaceType, BeanClass);
- also : replace bean implementations in the running application and context hot reinit
- bugfix for NullPointerException in Android preview in IntelliJ
- added support for automatic selection of modified entities (BaseDao.getAllItemsModifiedAfter)
  .. simply extend your rowmapper to implement TimestampSupportingRowmapper and return
     the timestamp fields
- added an after-context-init hook to enable application post-construct
- added a function deleteById carrying a Long parameter to the DAOs
- added an constructor based "transient" determination to ModelBase
- added some utils for basic date calculation
- added queryByExample function in order to do QBE :)
- modified DataSetChangeAware interface, now passes the emitted class in order to be able to
  create aggregator-alike DataSetChangeAware components handling multiple entity types
- introduced a query() function in BaseDao to unify querying for full lists
- harmonized internal getBy...Functions


--- DEPRECATION NOTICE ---
- don't inherit AbstractModelBase any more! The "id" column clashes